Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53795

Grabbing Qml scene does not set the QImage device pixel ratio

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.8
    • 5.4.2, 5.5.1, 5.6.2, 5.7.0, 5.8.0 Beta
    • GUI: Painting
    • None

      The generated image does not contains the window device pixel ratio property and lead to big images being painted while the grabbed window is on a retina screen and drawn on a non retina screen.
      Those calls are affected:

      • QQuickWindow::grabWindow()
      • QQuickWidget::grabFramebuffer()

      Workaround, set the image devicePixelRatio yourself:

      • image.setDevicePixelRatio(QQuickWindow::effectiveDevicePixelRatio())
      • image.setDevicePixelRatio(QQuickWidget::quickwindow::effectiveDevicePixelRatio())

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            filipe.azevedo Filipe Azevedo
            filipe.azevedo Filipe Azevedo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes